source code link in CM Notes

--- a/CM/unit3/Soem/matrix-decomposition.tex
+++ b/CM/unit3/Soem/matrix-decomposition.tex
@@ -4,6 +4,7 @@
 \makeatletter
 \@addtoreset{equation}{section}
 \makeatother
+\ihead{\footnotesize\textbf\thetitle} \ohead{\footnotesize\href{https://github.com/mayankxor/LaTeX-this-and-that/blob/main/CM/unit3/Soem/matrix-decomposition.tex}{\ttfamily Source Code}, last compiled \today}
 \renewcommand{\theequation}{\thesection.\arabic{equation}}
 \newcommand\numberthis{\refstepcounter{equation}\tag{\theequation}}
 \author{Mayank Rajput}
